fix quote spacing on mobile

--- a/src/sass/markdown.sass
+++ b/src/sass/markdown.sass
@@ -1,8 +1,11 @@
 blockquote
   border-left: 2px solid #c5c1ad
   color: #979797
-  padding: 0 8px
-  margin-left: 5px
+  padding-left: 8px
+  margin-inline-start: unset
+  margin-inline-end: unset
+  margin-block-start: .5em
+  margin-block-end: .5em
 
 pre
   margin-top: 0.35714285714285715em
